--- a/GeoPandas_Parte1-trabalhando_com_dados_geoespaciais/Modificando-o-Sistema-de-Coordenadas.ipynb
+++ b/GeoPandas_Parte1-trabalhando_com_dados_geoespaciais/Modificando-o-Sistema-de-Coordenadas.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "source": [
     "import geopandas as gpd"
    ],
@@ -36,40 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "source": [
     "rj = gpd.read_file('./data/Mapas/RJ-MUNIC/RJ-MUNIC.shp')\n",
     "geo_dados = gpd.read_file('./data/Mapas/RJ-DATASET/DATASET.shp')"
    ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "DriverError",
-     "evalue": "./data/Mapas/RJ-DATASET/DATASET.shp: No such file or directory",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCPLE_OpenFailedError\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[0;32mfiona/_shim.pyx\u001b[0m in \u001b[0;36mfiona._shim.gdal_open_vector\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mfiona/_err.pyx\u001b[0m in \u001b[0;36mfiona._err.exc_wrap_pointer\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mCPLE_OpenFailedError\u001b[0m: ./data/Mapas/RJ-DATASET/DATASET.shp: No such file or directory",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mDriverError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-c4d48fb5cc6e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mrj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/Mapas/RJ-MUNIC/RJ-MUNIC.shp'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mgeo_dados\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/Mapas/RJ-DATASET/DATASET.shp'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/geopandas/io/file.py\u001b[0m in \u001b[0;36m_read_file\u001b[0;34m(filename, bbox, mask, rows, **kwargs)\u001b[0m\n\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    200\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mfiona_env\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 201\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_or_bytes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    202\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    203\u001b[0m             \u001b[0;31m# In a future Fiona release the crs attribute of features will\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/fiona/env.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    406\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    407\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlocal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_env\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 408\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    409\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    410\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/fiona/__init__.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode, driver, schema, crs, encoding, layer, vfs, enabled_drivers, crs_wkt, **kwargs)\u001b[0m\n\u001b[1;32m    262\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    263\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 264\u001b[0;31m             c = Collection(path, mode, driver=driver, encoding=encoding,\n\u001b[0m\u001b[1;32m    265\u001b[0m                            layer=layer, enabled_drivers=enabled_drivers, **kwargs)\n\u001b[1;32m    266\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/fiona/collection.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, path, mode, driver, schema, crs, encoding, layer, vsi, archive, enabled_drivers, crs_wkt, ignore_fields, ignore_geometry, **kwargs)\u001b[0m\n\u001b[1;32m    160\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 162\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    163\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWritingSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mfiona/ogrext.pyx\u001b[0m in \u001b[0;36mfiona.ogrext.Session.start\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mfiona/_shim.pyx\u001b[0m in \u001b[0;36mfiona._shim.gdal_open_vector\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mDriverError\u001b[0m: ./data/Mapas/RJ-DATASET/DATASET.shp: No such file or directory"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "rj"
    ],
@@ -108,7 +85,7 @@
        "      <td>1535</td>\n",
        "      <td>3304557</td>\n",
        "      <td>RIO DE JANEIRO</td>\n",
-       "      <td>(POLYGON ((-43.1237647832704 -22.8071200194477...</td>\n",
+       "      <td>MULTIPOLYGON (((-43.12376 -22.80712, -43.12380...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -119,27 +96,7 @@
        "0  1535    3304557  RIO DE JANEIRO   \n",
        "\n",
        "                                            geometry  \n",
-       "0  (POLYGON ((-43.1237647832704 -22.8071200194477...  "
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "rj.crs"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'proj': 'longlat', 'ellps': 'GRS80', 'no_defs': True}"
+       "0  MULTIPOLYGON (((-43.12376 -22.80712, -43.12380...  "
       ]
      },
      "metadata": {},
@@ -150,16 +107,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
-    "geo_dados.crs"
+    "rj.crs"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'init': 'epsg:4326'}"
+       "<Geographic 2D CRS: EPSG:4674>\n",
+       "Name: SIRGAS 2000\n",
+       "Axis Info [ellipsoidal]:\n",
+       "- Lat[north]: Geodetic latitude (degree)\n",
+       "- Lon[east]: Geodetic longitude (degree)\n",
+       "Area of Use:\n",
+       "- name: Latin America - Central America and South America - onshore and offshore. Brazil - onshore and offshore.\n",
+       "- bounds: (-122.19, -59.87, -25.28, 32.72)\n",
+       "Datum: Sistema de Referencia Geocentrico para las AmericaS 2000\n",
+       "- Ellipsoid: GRS 1980\n",
+       "- Prime Meridian: Greenwich"
       ]
      },
      "metadata": {},
@@ -170,45 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "rj = rj.to_crs('+proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=km +no_defs')"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "geo_dados = geo_dados.to_crs('+proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=km +no_defs')"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "rj.crs"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'+proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=km +no_defs'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "source": [
     "geo_dados.crs"
    ],
@@ -217,7 +146,67 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'+proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=km +no_defs'"
+       "<Geographic 2D CRS: GEOGCS[\"GCS_unknown\",DATUM[\"WGS_1984\",SPHEROID[\"WG ...>\n",
+       "Name: GCS_unknown\n",
+       "Axis Info [ellipsoidal]:\n",
+       "- lon[east]: Longitude (Degree)\n",
+       "- lat[north]: Latitude (Degree)\n",
+       "Area of Use:\n",
+       "- undefined\n",
+       "Datum: World Geodetic System 1984\n",
+       "- Ellipsoid: WGS 84\n",
+       "- Prime Meridian: Greenwich"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "rj = rj.to_crs('+proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=km +no_defs')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
+    "geo_dados = geo_dados.to_crs('+proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=km +no_defs')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "rj.crs"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<Bound CRS: +proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0, ...>\n",
+       "Name: unknown\n",
+       "Axis Info [cartesian]:\n",
+       "- E[east]: Easting (kilometre)\n",
+       "- N[north]: Northing (kilometre)\n",
+       "Area of Use:\n",
+       "- undefined\n",
+       "Coordinate Operation:\n",
+       "- name: Transformation from unknown to WGS84\n",
+       "- method: Position Vector transformation (geog2D domain)\n",
+       "Datum: Unknown based on GRS80 ellipsoid\n",
+       "- Ellipsoid: GRS 1980\n",
+       "- Prime Meridian: Greenwich\n",
+       "Source CRS: unknown"
       ]
      },
      "metadata": {},
@@ -228,17 +217,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "source": [
-    "rj.to_file('./data/Mapas/RJ-MUNIC/RJ-MUNIC.shp')\n",
-    "geo_dados.to_file('./data/Mapas/RJ-DATASET/DATASET.shp')"
+    "geo_dados.crs"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<Bound CRS: +proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0, ...>\n",
+       "Name: unknown\n",
+       "Axis Info [cartesian]:\n",
+       "- E[east]: Easting (kilometre)\n",
+       "- N[north]: Northing (kilometre)\n",
+       "Area of Use:\n",
+       "- undefined\n",
+       "Coordinate Operation:\n",
+       "- name: Transformation from unknown to WGS84\n",
+       "- method: Position Vector transformation (geog2D domain)\n",
+       "Datum: Unknown based on GRS80 ellipsoid\n",
+       "- Ellipsoid: GRS 1980\n",
+       "- Prime Meridian: Greenwich\n",
+       "Source CRS: unknown"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "source": [
+    "rj.to_file('./data/Mapas/RJ-MUNIC/RJ-MUNIC.shp')\n",
+    "geo_dados.to_file('./data/Mapas/RJ-DATASET/DATASET.shp')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/yorinori/anaconda3/lib/python3.8/site-packages/geopandas/io/file.py:362: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  pd.Int64Index,\n",
+      "/home/yorinori/anaconda3/lib/python3.8/site-packages/geopandas/io/file.py:362: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  pd.Int64Index,\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "source": [
     "rj2 = gpd.read_file('./data/Mapas/RJ-MUNIC/RJ-MUNIC.shp')"
    ],
@@ -247,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "source": [
     "rj2"
    ],
@@ -286,7 +319,7 @@
        "      <td>1535</td>\n",
        "      <td>3304557</td>\n",
        "      <td>RIO DE JANEIRO</td>\n",
-       "      <td>(POLYGON ((692.5758012880638 7476.609203982483...</td>\n",
+       "      <td>MULTIPOLYGON (((692.576 7476.609, 692.572 7476...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -297,18 +330,18 @@
        "0  1535    3304557  RIO DE JANEIRO   \n",
        "\n",
        "                                            geometry  \n",
-       "0  (POLYGON ((692.5758012880638 7476.609203982483...  "
+       "0  MULTIPOLYGON (((692.576 7476.609, 692.572 7476...  "
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 14
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "source": [
     "rj2.crs"
    ],
@@ -317,16 +350,23 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'proj': 'utm',\n",
-       " 'zone': 23,\n",
-       " 'south': True,\n",
-       " 'ellps': 'GRS80',\n",
-       " 'units': 'km',\n",
-       " 'no_defs': True}"
+       "<Derived Projected CRS: PROJCS[\"unknown\",GEOGCS[\"GCS_unknown\",DATUM[\"D_Unk ...>\n",
+       "Name: unknown\n",
+       "Axis Info [cartesian]:\n",
+       "- [east]: Easting (kilometre)\n",
+       "- [north]: Northing (kilometre)\n",
+       "Area of Use:\n",
+       "- undefined\n",
+       "Coordinate Operation:\n",
+       "- name: unnamed\n",
+       "- method: Transverse Mercator\n",
+       "Datum: D_Unknown_based_on_GRS80_ellipsoid\n",
+       "- Ellipsoid: GRS 1980\n",
+       "- Prime Meridian: Greenwich"
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 15
     }
    ],
    "metadata": {}
