--- a/GeoPandas_Parte1-trabalhando_com_dados_geoespaciais/Selecionando-pontos-dentro-de-uma-regiao.ipynb
+++ b/GeoPandas_Parte1-trabalhando_com_dados_geoespaciais/Selecionando-pontos-dentro-de-uma-regiao.ipynb
@@ -814,6 +814,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Selecionando apenas os pontos dentro de uma região"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "source": [
