--- a/GeoPandas_Parte1-trabalhando_com_dados_geoespaciais/Agregando-outros-tipos-de-transporte.ipynb
+++ b/GeoPandas_Parte1-trabalhando_com_dados_geoespaciais/Agregando-outros-tipos-de-transporte.ipynb
@@ -1134,6 +1134,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "falta a última aula para finalizar o curso"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
