Atualizando o arquivo DATASET.shp

--- a/GeoPandas_Parte1-trabalhando_com_dados_geoespaciais/Agregando-outros-tipos-de-transporte.ipynb
+++ b/GeoPandas_Parte1-trabalhando_com_dados_geoespaciais/Agregando-outros-tipos-de-transporte.ipynb
@@ -337,7 +337,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0f00811c40>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f25ac55fbe0>"
       ]
      },
      "metadata": {},
@@ -381,7 +381,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0effd49460>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f25abb1da00>"
       ]
      },
      "metadata": {},
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "source": [
     "brt.crs"
    ],
@@ -668,14 +668,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "source": [
     "base = rj.plot(color='white', edgecolor='black', figsize=(15,8))\n",
     "geo_dados.plot(ax=base, color='orange', alpha=0.2)\n",
@@ -688,11 +688,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0efe51a670>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f25aa272640>"
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 16
     },
     {
      "output_type": "display_data",
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "source": [
     "transporte = pd.concat([trem.geometry, metro.geometry, brt.geometry], ignore_index = True)"
    ],
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "source": [
     "type(transporte)"
    ],
@@ -733,14 +733,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 18
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "source": [
     "geo_dados['Dist_Transporte'] = geo_dados['geometry'].apply(lambda x: transporte.distance(x).min())"
    ],
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "source": [
     "geo_dados.head()"
    ],
@@ -790,6 +790,7 @@
        "      <th>Transacao</th>\n",
        "      <th>Valor</th>\n",
        "      <th>Dist_Metro</th>\n",
+       "      <th>Dist_Trans</th>\n",
        "      <th>geometry</th>\n",
        "      <th>Dist_Transporte</th>\n",
        "    </tr>\n",
@@ -811,6 +812,7 @@
        "      <td>Venda</td>\n",
        "      <td>1095000</td>\n",
        "      <td>15.622939</td>\n",
+       "      <td>0.443193</td>\n",
        "      <td>POINT (657.514 7453.832)</td>\n",
        "      <td>0.443193</td>\n",
        "    </tr>\n",
@@ -830,6 +832,7 @@
        "      <td>Venda</td>\n",
        "      <td>650000</td>\n",
        "      <td>7.530741</td>\n",
+       "      <td>3.642787</td>\n",
        "      <td>POINT (670.524 7461.803)</td>\n",
        "      <td>3.642787</td>\n",
        "    </tr>\n",
@@ -849,6 +852,7 @@
        "      <td>Venda</td>\n",
        "      <td>150000</td>\n",
        "      <td>0.736973</td>\n",
+       "      <td>0.641470</td>\n",
        "      <td>POINT (674.345 7469.440)</td>\n",
        "      <td>0.641470</td>\n",
        "    </tr>\n",
@@ -868,6 +872,7 @@
        "      <td>Venda</td>\n",
        "      <td>430000</td>\n",
        "      <td>10.718039</td>\n",
+       "      <td>0.422370</td>\n",
        "      <td>POINT (662.701 7457.284)</td>\n",
        "      <td>0.422370</td>\n",
        "    </tr>\n",
@@ -887,6 +892,7 @@
        "      <td>Venda</td>\n",
        "      <td>1160000</td>\n",
        "      <td>17.131159</td>\n",
+       "      <td>0.214605</td>\n",
        "      <td>POINT (656.019 7453.574)</td>\n",
        "      <td>0.214605</td>\n",
        "    </tr>\n",
@@ -909,12 +915,12 @@
        "3        Avenida Salvador Allende     RJ -22.984787 -43.412703        2   \n",
        "4  Rua Desembargador Paulo Alonso     RJ -23.018927 -43.477505        3   \n",
        "\n",
-       "   Suites  Vagas         Tipo Transacao    Valor  Dist_Metro  \\\n",
-       "0       1      3  Apartamento     Venda  1095000   15.622939   \n",
-       "1       1      2  Apartamento     Venda   650000    7.530741   \n",
-       "2       0      0  Apartamento     Venda   150000    0.736973   \n",
-       "3       1      1  Apartamento     Venda   430000   10.718039   \n",
-       "4       1      2  Apartamento     Venda  1160000   17.131159   \n",
+       "   Suites  Vagas         Tipo Transacao    Valor  Dist_Metro  Dist_Trans  \\\n",
+       "0       1      3  Apartamento     Venda  1095000   15.622939    0.443193   \n",
+       "1       1      2  Apartamento     Venda   650000    7.530741    3.642787   \n",
+       "2       0      0  Apartamento     Venda   150000    0.736973    0.641470   \n",
+       "3       1      1  Apartamento     Venda   430000   10.718039    0.422370   \n",
+       "4       1      2  Apartamento     Venda  1160000   17.131159    0.214605   \n",
        "\n",
        "                   geometry  Dist_Transporte  \n",
        "0  POINT (657.514 7453.832)         0.443193  \n",
@@ -925,14 +931,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 20
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "source": [
     "geo_dados.corr()"
    ],
@@ -967,6 +973,7 @@
        "      <th>Vagas</th>\n",
        "      <th>Valor</th>\n",
        "      <th>Dist_Metro</th>\n",
+       "      <th>Dist_Trans</th>\n",
        "      <th>Dist_Transporte</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -982,6 +989,7 @@
        "      <td>0.724397</td>\n",
        "      <td>-0.036671</td>\n",
        "      <td>-0.042684</td>\n",
+       "      <td>-0.042684</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Latitude</th>\n",
@@ -993,6 +1001,7 @@
        "      <td>-0.274707</td>\n",
        "      <td>-0.299038</td>\n",
        "      <td>-0.217864</td>\n",
+       "      <td>0.358735</td>\n",
        "      <td>0.358735</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1006,6 +1015,7 @@
        "      <td>0.191868</td>\n",
        "      <td>-0.874788</td>\n",
        "      <td>-0.031812</td>\n",
+       "      <td>-0.031812</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Quartos</th>\n",
@@ -1017,6 +1027,7 @@
        "      <td>0.520499</td>\n",
        "      <td>0.481216</td>\n",
        "      <td>0.021794</td>\n",
+       "      <td>-0.014628</td>\n",
        "      <td>-0.014628</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1030,6 +1041,7 @@
        "      <td>0.464075</td>\n",
        "      <td>0.188521</td>\n",
        "      <td>0.006363</td>\n",
+       "      <td>0.006363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Vagas</th>\n",
@@ -1041,6 +1053,7 @@
        "      <td>1.000000</td>\n",
        "      <td>0.456596</td>\n",
        "      <td>0.215787</td>\n",
+       "      <td>0.070240</td>\n",
        "      <td>0.070240</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1054,6 +1067,7 @@
        "      <td>1.000000</td>\n",
        "      <td>-0.195641</td>\n",
        "      <td>-0.103653</td>\n",
+       "      <td>-0.103653</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Dist_Metro</th>\n",
@@ -1066,6 +1080,20 @@
        "      <td>-0.195641</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.261040</td>\n",
+       "      <td>0.261040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dist_Trans</th>\n",
+       "      <td>-0.042684</td>\n",
+       "      <td>0.358735</td>\n",
+       "      <td>-0.031812</td>\n",
+       "      <td>-0.014628</td>\n",
+       "      <td>0.006363</td>\n",
+       "      <td>0.070240</td>\n",
+       "      <td>-0.103653</td>\n",
+       "      <td>0.261040</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Dist_Transporte</th>\n",
@@ -1077,6 +1105,7 @@
        "      <td>0.070240</td>\n",
        "      <td>-0.103653</td>\n",
        "      <td>0.261040</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1093,29 +1122,31 @@
        "Vagas            0.594699 -0.274707  -0.283960  0.520499  0.621140  1.000000   \n",
        "Valor            0.724397 -0.299038   0.191868  0.481216  0.464075  0.456596   \n",
        "Dist_Metro      -0.036671 -0.217864  -0.874788  0.021794  0.188521  0.215787   \n",
+       "Dist_Trans      -0.042684  0.358735  -0.031812 -0.014628  0.006363  0.070240   \n",
        "Dist_Transporte -0.042684  0.358735  -0.031812 -0.014628  0.006363  0.070240   \n",
        "\n",
-       "                    Valor  Dist_Metro  Dist_Transporte  \n",
-       "Area             0.724397   -0.036671        -0.042684  \n",
-       "Latitude        -0.299038   -0.217864         0.358735  \n",
-       "Longitude        0.191868   -0.874788        -0.031812  \n",
-       "Quartos          0.481216    0.021794        -0.014628  \n",
-       "Suites           0.464075    0.188521         0.006363  \n",
-       "Vagas            0.456596    0.215787         0.070240  \n",
-       "Valor            1.000000   -0.195641        -0.103653  \n",
-       "Dist_Metro      -0.195641    1.000000         0.261040  \n",
-       "Dist_Transporte -0.103653    0.261040         1.000000  "
+       "                    Valor  Dist_Metro  Dist_Trans  Dist_Transporte  \n",
+       "Area             0.724397   -0.036671   -0.042684        -0.042684  \n",
+       "Latitude        -0.299038   -0.217864    0.358735         0.358735  \n",
+       "Longitude        0.191868   -0.874788   -0.031812        -0.031812  \n",
+       "Quartos          0.481216    0.021794   -0.014628        -0.014628  \n",
+       "Suites           0.464075    0.188521    0.006363         0.006363  \n",
+       "Vagas            0.456596    0.215787    0.070240         0.070240  \n",
+       "Valor            1.000000   -0.195641   -0.103653        -0.103653  \n",
+       "Dist_Metro      -0.195641    1.000000    0.261040         0.261040  \n",
+       "Dist_Trans      -0.103653    0.261040    1.000000         1.000000  \n",
+       "Dist_Transporte -0.103653    0.261040    1.000000         1.000000  "
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 21
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "source": [
     "geo_dados.to_file('data/Mapas/RJ-DATASET/DATASET.shp')"
    ],
@@ -1126,17 +1157,10 @@
      "text": [
       "/home/yorinori/anaconda3/lib/python3.8/site-packages/geopandas/io/file.py:362: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
       "  pd.Int64Index,\n",
-      "<ipython-input-23-9efd4b6ef723>:1: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "<ipython-input-22-9efd4b6ef723>:1: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
       "  geo_dados.to_file('data/Mapas/RJ-DATASET/DATASET.shp')\n"
      ]
     }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "falta a última aula para finalizar o curso"
    ],
    "metadata": {}
   },
