Fim do Curso GeoPandas Parte 1

--- a/GeoPandas_Parte1-trabalhando_com_dados_geoespaciais/Distancia-ate-a-praia.ipynb
+++ b/GeoPandas_Parte1-trabalhando_com_dados_geoespaciais/Distancia-ate-a-praia.ipynb
@@ -1003,6 +1003,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Fim do curso"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
