--- a/GeoPandas_Parte2-visualizacao-com-mapas-interativos/Setores-censitarios.ipynb
+++ b/GeoPandas_Parte2-visualizacao-com-mapas-interativos/Setores-censitarios.ipynb
@@ -42,6 +42,17 @@
    "cell_type": "markdown",
    "source": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "%matplotlib inline\n",
+    "import pandas as pd\n",
+    "import geopandas as gpd"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
