Fix: RJ-SETOR.shp pathing

--- a/GeoPandas_Parte2-visualizacao-com-mapas-interativos/Setores-censitarios.ipynb
+++ b/GeoPandas_Parte2-visualizacao-com-mapas-interativos/Setores-censitarios.ipynb
@@ -11,21 +11,16 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Collecting folium\n",
-      "  Downloading folium-0.12.1.post1-py2.py3-none-any.whl (95 kB)\n",
-      "\u001b[K     |████████████████████████████████| 95 kB 1.4 MB/s \n",
-      "\u001b[?25hRequirement already satisfied: numpy in /home/yorinori/anaconda3/lib/python3.8/site-packages (from folium) (1.18.5)\n",
-      "Requirement already satisfied: requests in /home/yorinori/anaconda3/lib/python3.8/site-packages (from folium) (2.24.0)\n",
-      "Collecting branca>=0.3.0\n",
-      "  Downloading branca-0.5.0-py3-none-any.whl (24 kB)\n",
+      "Requirement already satisfied: folium in /home/yorinori/anaconda3/lib/python3.8/site-packages (0.12.1.post1)\n",
       "Requirement already satisfied: jinja2>=2.9 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from folium) (3.1.2)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from requests->folium) (2.10)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from requests->folium) (3.0.4)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from requests->folium) (1.25.9)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from requests->folium) (2020.6.20)\n",
+      "Requirement already satisfied: branca>=0.3.0 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from folium) (0.5.0)\n",
+      "Requirement already satisfied: numpy in /home/yorinori/anaconda3/lib/python3.8/site-packages (from folium) (1.18.5)\n",
+      "Requirement already satisfied: requests in /home/yorinori/anaconda3/lib/python3.8/site-packages (from folium) (2.24.0)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from jinja2>=2.9->folium) (2.1.1)\n",
-      "Installing collected packages: branca, folium\n",
-      "Successfully installed branca-0.5.0 folium-0.12.1.post1\n"
+      "Requirement already satisfied: idna<3,>=2.5 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from requests->folium) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from requests->folium) (2020.6.20)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from requests->folium) (3.0.4)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from requests->folium) (1.25.9)\n"
      ]
     }
    ],
@@ -45,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "%matplotlib inline\n",
     "import pandas as pd\n",
@@ -56,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "import os\n",
     "import zipfile\n",
@@ -67,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "source": [
     "dir = './data/Mapas/RJ-SETOR/tmp'\n",
     "dir_files = './data/Mapas/RJ-SETOR/data'\n",
@@ -79,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "source": [
     "filenames = []\n",
     "for root, dirs, files in os.walk(dir_files):\n",
@@ -128,14 +123,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "source": [
     "for item in filenames: \n",
     "    zip_ref = zipfile.ZipFile(dir_files + '/' + item, 'r')\n",
@@ -147,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "source": [
     "filenames[0]"
    ],
@@ -160,14 +155,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "source": [
     "filenames[0][:-4]"
    ],
@@ -180,14 +175,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "source": [
     "[dir + '/' + item[:-4] + '_setor.shp' for item in filenames]"
    ],
@@ -232,14 +227,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "source": [
     "[gpd.read_file(dir + '/' + item[:-4] + '_setor.shp') for item in filenames]"
    ],
@@ -2294,14 +2289,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 10
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "source": [
     "setor = pd.concat([gpd.read_file(dir + '/' + item[:-4] + '_setor.shp') for item in filenames], ignore_index=True)"
    ],
@@ -2310,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "source": [
     "shutil.rmtree(dir)"
    ],
@@ -2319,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "source": [
     "setor"
    ],
@@ -2612,14 +2607,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "source": [
     "type(setor)"
    ],
@@ -2632,14 +2627,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 14
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "source": [
     "setor.crs"
    ],
@@ -2662,14 +2657,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "source": [
     "setor = setor.to_crs('+proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=km +no_defs')"
    ],
@@ -2678,7 +2673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "source": [
     "setor.crs"
    ],
@@ -2687,7 +2682,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<Bound CRS: +proj=utm + zone=23 + south +ellps=GRS80 +towgs84= ...>\n",
+       "<Bound CRS: +proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0, ...>\n",
        "Name: unknown\n",
        "Axis Info [cartesian]:\n",
        "- E[east]: Easting (kilometre)\n",
@@ -2704,14 +2699,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 17
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "source": [
     "setor.plot(color='white', edgecolor='black', figsize=(15, 8))"
    ],
@@ -2720,11 +2715,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa6f60c7130>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc7d1f93310>"
       ]
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 18
     },
     {
      "output_type": "display_data",
@@ -2743,9 +2738,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "source": [
-    "setor.to_file('./data/Mapas/RJ-SETOR.shp')"
+    "setor.to_file('./data/Mapas/RJ-SETOR/RJ-SETOR.shp')"
    ],
    "outputs": [
     {
@@ -2761,7 +2756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "source": [
     "botafogo = setor[setor['NM_BAIRRO'] == 'Botafogo']"
    ],
