--- a/GeoPandas_Parte2-visualizacao-com-mapas-interativos/Dados-censitarios.ipynb
+++ b/GeoPandas_Parte2-visualizacao-com-mapas-interativos/Dados-censitarios.ipynb
@@ -27,218 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "source": [
     "#!conda install -c rmg xlrd -y"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Collecting package metadata (current_repodata.json): done\n",
-      "Solving environment: - \n",
-      "The environment is inconsistent, please check the package plan carefully\n",
-      "The following packages are causing the inconsistency:\n",
-      "\n",
-      "  - defaults/linux-64::notebook==6.0.3=py38_0\n",
-      "  - defaults/noarch::nltk==3.5=py_0\n",
-      "  - defaults/noarch::jupyter_client==6.1.6=py_0\n",
-      "  - defaults/noarch::dask==2.20.0=py_0\n",
-      "  - defaults/linux-64::distributed==2.20.0=py38_0\n",
-      "  - defaults/noarch::anaconda-project==0.8.4=py_0\n",
-      "  - defaults/linux-64::matplotlib==3.2.2=0\n",
-      "  - defaults/noarch::conda-verify==3.4.2=py_1\n",
-      "  - defaults/linux-64::jupyter==1.0.0=py38_7\n",
-      "  - defaults/linux-64::bkcharts==0.2=py38_0\n",
-      "  - defaults/noarch::nbformat==5.0.7=py_0\n",
-      "  - defaults/linux-64::jsonschema==3.2.0=py38_0\n",
-      "  - defaults/linux-64::conda-build==3.18.11=py38_0\n",
-      "  - defaults/noarch::ipywidgets==7.5.1=py_0\n",
-      "  - defaults/noarch::sphinx==3.1.2=py_0\n",
-      "  - defaults/noarch::jupyterlab==2.1.5=py_0\n",
-      "  - defaults/linux-64::anaconda-client==1.7.2=py38_0\n",
-      "  - defaults/noarch::jupyterlab_server==1.2.0=py_0\n",
-      "  - defaults/linux-64::spyder==4.1.4=py38_0\n",
-      "  - defaults/linux-64::pandas==1.0.5=py38h0573a6f_0\n",
-      "  - defaults/linux-64::scikit-image==0.16.2=py38h0573a6f_0\n",
-      "  - defaults/linux-64::widgetsnbextension==3.5.1=py38_0\n",
-      "  - defaults/noarch::qtconsole==4.7.5=py_0\n",
-      "  - defaults/linux-64::pytest==5.4.3=py38_0\n",
-      "  - defaults/linux-64::anaconda-navigator==1.9.12=py38_0\n",
-      "  - defaults/linux-64::anaconda==2020.07=py38_0\n",
-      "  - conda-forge/noarch::jupyterthemes==0.20.0=py_1\n",
-      "  - defaults/noarch::numpydoc==1.1.0=py_0\n",
-      "  - defaults/noarch::jupyter_console==6.1.0=py_0\n",
-      "  - defaults/linux-64::spyder-kernels==1.9.2=py38_0\n",
-      "  - defaults/linux-64::ipykernel==5.3.2=py38h5ca1d4c_0\n",
-      "  - defaults/linux-64::matplotlib-base==3.2.2=py38hef1b27d_0\n",
-      "  - defaults/linux-64::nbconvert==5.6.1=py38_0\n",
-      "  - defaults/linux-64::bokeh==2.1.1=py38_0\n",
-      "  - defaults/noarch::seaborn==0.10.1=py_0\n",
-      "  - defaults/noarch::bleach==3.1.5=py_0\n",
-      "  - defaults/linux-64::_ipyw_jlab_nb_ext_conf==0.1.0=py38_0\n",
-      "failed with initial frozen solve. Retrying with flexible solve.\n",
-      "Solving environment: done\n",
-      "Collecting package metadata (repodata.json): done\n",
-      "Solving environment: / \n",
-      "The environment is inconsistent, please check the package plan carefully\n",
-      "The following packages are causing the inconsistency:\n",
-      "\n",
-      "  - defaults/linux-64::notebook==6.0.3=py38_0\n",
-      "  - defaults/noarch::nltk==3.5=py_0\n",
-      "  - defaults/noarch::jupyter_client==6.1.6=py_0\n",
-      "  - defaults/noarch::dask==2.20.0=py_0\n",
-      "  - defaults/linux-64::distributed==2.20.0=py38_0\n",
-      "  - defaults/noarch::anaconda-project==0.8.4=py_0\n",
-      "  - defaults/linux-64::matplotlib==3.2.2=0\n",
-      "  - defaults/noarch::conda-verify==3.4.2=py_1\n",
-      "  - defaults/linux-64::jupyter==1.0.0=py38_7\n",
-      "  - defaults/linux-64::bkcharts==0.2=py38_0\n",
-      "  - defaults/noarch::nbformat==5.0.7=py_0\n",
-      "  - defaults/linux-64::jsonschema==3.2.0=py38_0\n",
-      "  - defaults/linux-64::conda-build==3.18.11=py38_0\n",
-      "  - defaults/noarch::ipywidgets==7.5.1=py_0\n",
-      "  - defaults/noarch::sphinx==3.1.2=py_0\n",
-      "  - defaults/noarch::jupyterlab==2.1.5=py_0\n",
-      "  - defaults/linux-64::anaconda-client==1.7.2=py38_0\n",
-      "  - defaults/noarch::jupyterlab_server==1.2.0=py_0\n",
-      "  - defaults/linux-64::spyder==4.1.4=py38_0\n",
-      "  - defaults/linux-64::pandas==1.0.5=py38h0573a6f_0\n",
-      "  - defaults/linux-64::scikit-image==0.16.2=py38h0573a6f_0\n",
-      "  - defaults/linux-64::widgetsnbextension==3.5.1=py38_0\n",
-      "  - defaults/noarch::qtconsole==4.7.5=py_0\n",
-      "  - defaults/linux-64::pytest==5.4.3=py38_0\n",
-      "  - defaults/linux-64::anaconda-navigator==1.9.12=py38_0\n",
-      "  - defaults/linux-64::anaconda==2020.07=py38_0\n",
-      "  - conda-forge/noarch::jupyterthemes==0.20.0=py_1\n",
-      "  - defaults/noarch::numpydoc==1.1.0=py_0\n",
-      "  - defaults/noarch::jupyter_console==6.1.0=py_0\n",
-      "  - defaults/linux-64::spyder-kernels==1.9.2=py38_0\n",
-      "  - defaults/linux-64::ipykernel==5.3.2=py38h5ca1d4c_0\n",
-      "  - defaults/linux-64::matplotlib-base==3.2.2=py38hef1b27d_0\n",
-      "  - defaults/linux-64::nbconvert==5.6.1=py38_0\n",
-      "  - defaults/linux-64::bokeh==2.1.1=py38_0\n",
-      "  - defaults/noarch::seaborn==0.10.1=py_0\n",
-      "  - defaults/noarch::bleach==3.1.5=py_0\n",
-      "  - defaults/linux-64::_ipyw_jlab_nb_ext_conf==0.1.0=py38_0\n",
-      "done\n",
-      "\n",
-      "## Package Plan ##\n",
-      "\n",
-      "  environment location: /home/yorinori/anaconda3\n",
-      "\n",
-      "  added / updated specs:\n",
-      "    - xlrd\n",
-      "\n",
-      "\n",
-      "The following packages will be downloaded:\n",
-      "\n",
-      "    package                    |            build\n",
-      "    ---------------------------|-----------------\n",
-      "    _anaconda_depends-2020.07  |           py38_0           6 KB\n",
-      "    anaconda-custom            |           py38_1          35 KB\n",
-      "    babel-2.11.0               |   py38h06a4308_0         6.8 MB\n",
-      "    beautifulsoup4-4.11.1      |   py38h06a4308_0         185 KB\n",
-      "    ca-certificates-2020.6.20  |       hecda079_0         145 KB  rmg\n",
-      "    certifi-2020.6.20          |   py38h32f6830_0         151 KB  rmg\n",
-      "    click-8.0.4                |   py38h06a4308_0         151 KB\n",
-      "    conda-22.9.0               |   py38h06a4308_0         884 KB\n",
-      "    conda-build-3.23.3         |   py38h06a4308_0         575 KB\n",
-      "    dataclasses-0.8            |     pyh6d0b6a4_7           8 KB\n",
-      "    flask-1.1.2                |     pyhd3eb1b0_0          70 KB\n",
-      "    html5lib-1.1               |     pyhd3eb1b0_0          91 KB\n",
-      "    itsdangerous-2.0.1         |     pyhd3eb1b0_0          18 KB\n",
-      "    markupsafe-2.0.1           |   py38h27cfd23_0          22 KB\n",
-      "    openssl-1.1.1g             |       h516909a_0         2.1 MB  rmg\n",
-      "    packaging-22.0             |   py38h06a4308_0          68 KB\n",
-      "    patch-2.7.6                |    h7b6447c_1001         119 KB\n",
-      "    patsy-0.5.2                |   py38h06a4308_1         276 KB\n",
-      "    pyrsistent-0.18.0          |   py38heee7806_0          94 KB\n",
-      "    python-dateutil-2.8.2      |     pyhd3eb1b0_0         233 KB\n",
-      "    pytz-2022.7                |   py38h06a4308_0         209 KB\n",
-      "    sqlalchemy-1.4.32          |   py38h7f8727e_0         1.9 MB\n",
-      "    werkzeug-2.0.3             |     pyhd3eb1b0_0         221 KB\n",
-      "    xlrd-2.0.1                 |     pyhd3eb1b0_0          90 KB\n",
-      "    ------------------------------------------------------------\n",
-      "                                           Total:        14.4 MB\n",
-      "\n",
-      "The following NEW packages will be INSTALLED:\n",
-      "\n",
-      "  _anaconda_depends  pkgs/main/linux-64::_anaconda_depends-2020.07-py38_0\n",
-      "  babel              pkgs/main/linux-64::babel-2.11.0-py38h06a4308_0\n",
-      "  beautifulsoup4     pkgs/main/linux-64::beautifulsoup4-4.11.1-py38h06a4308_0\n",
-      "  click              pkgs/main/linux-64::click-8.0.4-py38h06a4308_0\n",
-      "  dataclasses        pkgs/main/noarch::dataclasses-0.8-pyh6d0b6a4_7\n",
-      "  flask              pkgs/main/noarch::flask-1.1.2-pyhd3eb1b0_0\n",
-      "  html5lib           pkgs/main/noarch::html5lib-1.1-pyhd3eb1b0_0\n",
-      "  itsdangerous       pkgs/main/noarch::itsdangerous-2.0.1-pyhd3eb1b0_0\n",
-      "  jinja2             pkgs/main/noarch::jinja2-2.11.3-pyhd3eb1b0_0\n",
-      "  markupsafe         pkgs/main/linux-64::markupsafe-2.0.1-py38h27cfd23_0\n",
-      "  packaging          pkgs/main/linux-64::packaging-22.0-py38h06a4308_0\n",
-      "  patch              pkgs/main/linux-64::patch-2.7.6-h7b6447c_1001\n",
-      "  patsy              pkgs/main/linux-64::patsy-0.5.2-py38h06a4308_1\n",
-      "  pyrsistent         pkgs/main/linux-64::pyrsistent-0.18.0-py38heee7806_0\n",
-      "  python-dateutil    pkgs/main/noarch::python-dateutil-2.8.2-pyhd3eb1b0_0\n",
-      "  pytz               pkgs/main/linux-64::pytz-2022.7-py38h06a4308_0\n",
-      "  sqlalchemy         pkgs/main/linux-64::sqlalchemy-1.4.32-py38h7f8727e_0\n",
-      "  statsmodels        pkgs/main/linux-64::statsmodels-0.11.1-py38h7b6447c_0\n",
-      "  werkzeug           pkgs/main/noarch::werkzeug-2.0.3-pyhd3eb1b0_0\n",
-      "\n",
-      "The following packages will be UPDATED:\n",
-      "\n",
-      "  conda              conda-forge::conda-4.10.1-py38h578d9b~ --> pkgs/main::conda-22.9.0-py38h06a4308_0\n",
-      "  conda-build                                3.18.11-py38_0 --> 3.23.3-py38h06a4308_0\n",
-      "  xlrd                                           1.2.0-py_0 --> 2.0.1-pyhd3eb1b0_0\n",
-      "\n",
-      "The following packages will be SUPERSEDED by a higher-priority channel:\n",
-      "\n",
-      "  ca-certificates    pkgs/main::ca-certificates-2020.6.24-0 --> rmg::ca-certificates-2020.6.20-hecda079_0\n",
-      "  certifi               pkgs/main::certifi-2020.6.20-py38_0 --> rmg::certifi-2020.6.20-py38h32f6830_0\n",
-      "  openssl              pkgs/main::openssl-1.1.1g-h7b6447c_0 --> rmg::openssl-1.1.1g-h516909a_0\n",
-      "\n",
-      "The following packages will be DOWNGRADED:\n",
-      "\n",
-      "  anaconda                                   2020.07-py38_0 --> custom-py38_1\n",
-      "\n",
-      "\n",
-      "\n",
-      "Downloading and Extracting Packages\n",
-      "dataclasses-0.8      | 8 KB      | ##################################### | 100% \n",
-      "conda-22.9.0         | 884 KB    | ##################################### | 100% \n",
-      "patsy-0.5.2          | 276 KB    | ##################################### | 100% \n",
-      "click-8.0.4          | 151 KB    | ##################################### | 100% \n",
-      "patch-2.7.6          | 119 KB    | ##################################### | 100% \n",
-      "ca-certificates-2020 | 145 KB    | ##################################### | 100% \n",
-      "flask-1.1.2          | 70 KB     | ##################################### | 100% \n",
-      "conda-build-3.23.3   | 575 KB    | ##################################### | 100% \n",
-      "certifi-2020.6.20    | 151 KB    | ##################################### | 100% \n",
-      "_anaconda_depends-20 | 6 KB      | ##################################### | 100% \n",
-      "itsdangerous-2.0.1   | 18 KB     | ##################################### | 100% \n",
-      "pytz-2022.7          | 209 KB    | ##################################### | 100% \n",
-      "xlrd-2.0.1           | 90 KB     | ##################################### | 100% \n",
-      "anaconda-custom      | 35 KB     | ##################################### | 100% \n",
-      "openssl-1.1.1g       | 2.1 MB    | ##################################### | 100% \n",
-      "markupsafe-2.0.1     | 22 KB     | ##################################### | 100% \n",
-      "packaging-22.0       | 68 KB     | ##################################### | 100% \n",
-      "sqlalchemy-1.4.32    | 1.9 MB    | ##################################### | 100% \n",
-      "beautifulsoup4-4.11. | 185 KB    | ##################################### | 100% \n",
-      "html5lib-1.1         | 91 KB     | ##################################### | 100% \n",
-      "python-dateutil-2.8. | 233 KB    | ##################################### | 100% \n",
-      "werkzeug-2.0.3       | 221 KB    | ##################################### | 100% \n",
-      "pyrsistent-0.18.0    | 94 KB     | ##################################### | 100% \n",
-      "babel-2.11.0         | 6.8 MB    | ##################################### | 100% \n",
-      "Preparing transaction: done\n",
-      "Verifying transaction: done\n",
-      "Executing transaction: done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "censo = pd.read_excel('./data/censo2010/RJ/EXCEL/Basico_RJ.xls')"
    ],
@@ -247,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "source": [
-    "setor = gpd.read_file('./data/Mapas/RJ-SETOR.shp')"
+    "setor = gpd.read_file('./data/Mapas/RJ-SETOR/RJ-SETOR.shp')"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "source": [
     "censo.head()"
    ],
@@ -465,14 +263,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "source": [
     "setor.head()"
    ],
@@ -636,14 +434,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "source": [
     "censo.dtypes"
    ],
@@ -689,14 +487,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "source": [
     "setor.dtypes"
    ],
@@ -723,14 +521,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "source": [
     "censo['Cod_setor'] = censo['Cod_setor'].astype(str)"
    ],
@@ -739,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "source": [
     "censo.dtypes"
    ],
@@ -785,14 +583,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 10
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "source": [
     "type(censo['Cod_setor'].iloc[0])"
    ],
@@ -805,14 +603,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "source": [
     "print(type(censo))\n",
     "print(type(setor))"
@@ -831,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "source": [
     "setor.shape"
    ],
@@ -844,14 +642,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "source": [
     "setor = pd.merge(setor, censo, left_on='CD_GEOCODI', right_on='Cod_setor', how='left')"
    ],
@@ -860,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "source": [
     "setor.shape"
    ],
@@ -873,14 +671,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "source": [
     "setor"
    ],
@@ -1257,14 +1055,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 16
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "source": [
     "setor.columns"
    ],
@@ -1287,14 +1085,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 17
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "source": [
     "type(setor)"
    ],
@@ -1307,14 +1105,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 18
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "source": [
     "setor.crs"
    ],
@@ -1339,14 +1137,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 19
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "source": [
     "setor = setor.to_crs('+proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=km +no_defs')"
    ],
@@ -1355,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "source": [
     "setor.crs"
    ],
@@ -1364,7 +1162,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<Bound CRS: +proj=utm + zone=23 + south +ellps=GRS80 +towgs84= ...>\n",
+       "<Bound CRS: +proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0, ...>\n",
        "Name: unknown\n",
        "Axis Info [cartesian]:\n",
        "- E[east]: Easting (kilometre)\n",
@@ -1381,16 +1179,16 @@
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 21
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "source": [
-    "setor.to_file('./data/Mapas/RJ-SETOR.shp')"
+    "setor.to_file('./data/Mapas/RJ-SETOR/RJ-SETOR.shp')"
    ],
    "outputs": [
     {
@@ -1399,8 +1197,8 @@
      "text": [
       "/home/yorinori/anaconda3/lib/python3.8/site-packages/geopandas/io/file.py:362: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
       "  pd.Int64Index,\n",
-      "<ipython-input-27-fc47d2bc618a>:1: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
-      "  setor.to_file('./data/Mapas/RJ-SETOR.shp')\n"
+      "<ipython-input-22-9b0075bd1762>:1: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "  setor.to_file('./data/Mapas/RJ-SETOR/RJ-SETOR.shp')\n"
      ]
     }
    ],
