--- a/GeoPandas_Parte2-visualizacao-com-mapas-interativos/04-Agregando-regioes-geograficas.ipynb
+++ b/GeoPandas_Parte2-visualizacao-com-mapas-interativos/04-Agregando-regioes-geograficas.ipynb
@@ -884,7 +884,7 @@
     "if not os.path.exists(dir):\n",
     "    os.makedirs(dir)\n",
     "\n",
-    "bairro.to_file(dir + '/RJ-BAIRRP.shp')"
+    "bairro.to_file(dir + '/RJ-BAIRRO.shp')"
    ],
    "outputs": [
     {
