--- a/GeoPandas_Parte2-visualizacao-com-mapas-interativos/Gerando-visualizacoes-dos-dados.ipynb
+++ b/GeoPandas_Parte2-visualizacao-com-mapas-interativos/Gerando-visualizacoes-dos-dados.ipynb
@@ -895,6 +895,28 @@
    "source": [],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Pendências"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "1) Verificar problemas com o crs\n",
+    "\n",
+    "2) Resolver o seguinte warning:\n",
+    "    FutureWarning: The choropleth  method has been deprecated. Instead use the new Choropleth class, which has the same arguments. See the example notebook 'GeoJSON_and_choropleth' for how to do this."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {}
   }
  ],
  "metadata": {
