Final do curso: Geopandas Parte 2 -visualização com mapas interativos

--- a/GeoPandas_Parte2-visualizacao-com-mapas-interativos/Mapas-de-calor.ipynb
+++ b/GeoPandas_Parte2-visualizacao-com-mapas-interativos/Mapas-de-calor.ipynb
@@ -1302,6 +1302,13 @@
    "source": [],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Final do curso"
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
